5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4075/executions/1643_2703.log
== TEST (2019-04-14 21:15:23) 
-- CODE:
idade= int(input("digite idade:"))

if (idade>=18):
	mensagem ("eleitor")

else:
	mensagem (nao_eleitor)
	
print("mensagem.lower()")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    mensagem (nao_eleitor)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:15:34) 
-- CODE:
idade= int(input("digite idade:"))

if (idade>=18):
	mensagem ("eleitor")

else:
	mensagem (nao_eleitor)
	
print("mensagem.lower()")
-- EXECUTION TIME:
0.163267
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2703/main.py", line 7, in <module>
    mensagem (nao_eleitor)
NameError: name 'mensagem' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:15:49) 
-- CODE:
idade= int(input("digite idade:"))

if (idade>=18):
	mensagem ("eleitor")

else:
	mensagem (nao_eleitor)
	
print("mensagem.lower()")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    mensagem (nao_eleitor)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:15:58) 
-- CODE:
idade= int(input("digite idade:"))

if (idade>=18):
	mensagem ("eleitor")

else:
	mensagem (nao_eleitor)
	
print("mensagem.lower()")
-- EXECUTION TIME:
0.232735
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2703/main.py", line 7, in <module>
    mensagem (nao_eleitor)
NameError: name 'mensagem' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:17:24) 
-- CODE:
idade= int(input("digite idade:"))

if (idade>=18):
	mensagem ("eleitor")

else:
	mensagem ("nao_eleitor")
	
print ("mensagem.lower()")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    mensagem ("nao_eleitor")
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:17:33) 
-- CODE:
idade= int(input("digite idade:"))

if (idade>=18):
	mensagem ("eleitor")

else:
	mensagem ("nao_eleitor")
	
print ("mensagem.lower()")
-- EXECUTION TIME:
0.226916
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2703/main.py", line 7, in <module>
    mensagem ("nao_eleitor")
NameError: name 'mensagem' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:18:35) 
-- CODE:
idade= int(input("digite idade:"))

if (idade>=18):
	mensagem= ("eleitor")

else:
	mensagem= ("nao_eleitor")
	
print ("mensagem.lower()")
-- OUTPUT:
mensagem.lower()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:18:43) 
-- CODE:
idade= int(input("digite idade:"))

if (idade>=18):
	mensagem= ("eleitor")

else:
	mensagem= ("nao_eleitor")
	
print ("mensagem.lower()")
-- EXECUTION TIME:
0.158583
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
mensagem.lower()
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
mensagem.lower()
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
mensagem.lower()
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:19:30) 
-- CODE:
idade= int(input("digite idade:"))

if (idade<=18):
	mensagem= ("eleitor")

else:
	mensagem= ("nao_eleitor")
	
print ("mensagem.lower()")
-- OUTPUT:
mensagem.lower()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:19:43) 
-- CODE:
idade= int(input("digite idade:"))

if (idade<=18):
	mensagem= ("eleitor")

else:
	mensagem= ("nao_eleitor")
	
print ("mensagem.lower()")
-- EXECUTION TIME:
0.212363
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
mensagem.lower()
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
mensagem.lower()
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
mensagem.lower()
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:22:34) 
-- CODE:
idade= int(input( "digite idade: "))

if (idade>=18):
	mensagem = ("Eleitor")

else:
	mensagem = ("Nao_eleitor")
	
print (mensagem.lower())
-- EXECUTION TIME:
0.309468
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
